refactor: simplify JSON format, use Java 21 HttpClient, add URL validation